--- a/src/styles/SideBar.css
+++ b/src/styles/SideBar.css
@@ -1,10 +1,14 @@
 .sidebar {
     display: flex;
     flex-direction: column;
+    height: 800px;
 }
 
 .pre-game-sidebar {
     justify-content: center;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 }
 
 .button {
