Added draw reason to a banner

--- a/src/styles/Board.css
+++ b/src/styles/Board.css
@@ -30,6 +30,7 @@
     top: 277px;
     z-index: 1;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
@@ -39,6 +40,15 @@
     opacity: 100%;
     font-weight: 800;
     font-size: 100px;
+    text-transform: uppercase;
+}
+
+.banner-subtext {
+    color: white;
+    opacity: 100%;
+    font-weight: 800;
+    font-size: 20px;
+    text-transform: uppercase;
 }
 
 .banner-king {
