--- a/src/styles/Board.css
+++ b/src/styles/Board.css
@@ -30,9 +30,12 @@
     top: 277px;
     z-index: 1;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.vertical-banner {
+    flex-direction: column;
 }
 
 .banner-text {
