Added methods to get bestMove, allMoves and update backend board

--- a/src/styles/SideBar.css
+++ b/src/styles/SideBar.css
@@ -136,6 +136,7 @@
     justify-content: center;
     border: 3px solid #769656;
     border-radius: 10px;
+    cursor: pointer;
 }
 
 .move-button:hover {
