--- a/src/styles/Board.css
+++ b/src/styles/Board.css
@@ -153,3 +153,18 @@
     height: 80px;
     border-radius: 50%;
 }
+
+.loading-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 40px;
+}
+
+.loading-note {
+    color: #eeeed2;
+    font-size: 20px;
+    font-weight: 600;
+    margin-top: 20px;
+    text-transform: uppercase;
+}
