--- a/src/styles/SideBar.css
+++ b/src/styles/SideBar.css
@@ -88,6 +88,8 @@
     border: 3px solid black;
     align-items: center;
     justify-content: center;
+    font-weight: 600;
+    text-transform: uppercase;
 }
 
 .leave-game-button:hover {
