--- a/src/styles/Timer.css
+++ b/src/styles/Timer.css
@@ -1,21 +1,26 @@
-.timer-container {
+.timer {
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 200px;
+    height: 50px;
+    margin-top: 3px;
+    border: black solid 3px;
+    border-radius: 10px;
 }
 
-.timer-rotated {
-    rotate: 180deg;
+.white-timer {
+    color: #61605e;
+    background-color: #979694;
+}
+
+.black-timer {
+    color: #82817f;
+    background-color: #2b2926;
 }
 
 .timer-text {
-    width: 50px;
     display: flex;
     justify-content: center;
-    padding: 2px;
-    margin: 3px;
-    color: black;
-    background-color: #eeeed2;
-    border: black solid 3px;
-    border-radius: 15%;
+    font-size: 40px;
 }
