--- a/src/styles/SideBar.css
+++ b/src/styles/SideBar.css
@@ -1,8 +1,6 @@
 .sidebar {
     display: flex;
     flex-direction: column;
-    height: 800px;
-    margin-top: 40px;
 }
 
 .pre-game-sidebar {
@@ -10,12 +8,12 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    padding-bottom: 40px;
 }
 
 .game-sidebar {
     display: flex;
     flex-direction: column;
+    margin-top: 20px
 }
 
 .button {
@@ -136,5 +134,5 @@
 .timer-container {
     display: flex;
     flex-direction: column;
-    margin-top: 520px;
+    margin-top: 525px;
 }
